GNOME Bugzilla – Bug 610001
Don't play a sound when the volume doesn't change
Last modified: 2010-03-09 10:30:41 UTC
When muted, or at full volume, and we don't actually change the volume, don't play a sound.
Created attachment 153835 [details] [review] Don't play a sound when the volume doesn't change No point in playing it, we're already at the right volume.
Created attachment 153840 [details] [review] Don't play a sound when the volume doesn't change No point in playing it, we're already at the right volume.
Attachment 153840 [details] pushed as 21030a3 - Don't play a sound when the volume doesn't change