Don't play a sound when the volume doesn't change

No point in playing it, we're already at the right volume.

https://bugzilla.gnome.org/show_bug.cgi?id=610001